# device-certificate-report

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  _config.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  publish_pypi.yml
device_certificate_report/: config.py  filters.py  main.py  version.py
device_certificate_report/components/: __init__.py  config.py  data_collection.py  filters.py  report_generation.py  utils.py  version.py
device_certificate_report/config/: hardware_families.py  panos_versions.py
device_certificate_report/models/: certificate.py  device.py
device_certificate_report/utilities/: cleaner.py  filters.py  pdf_generation.py
docker/: Dockerfile
docs/: index.md
docs/about/: contributing.md  license.md  release-notes.md
docs/css/: custom.css  termynal.css
docs/js/: custom.js  termynal.js
docs/user-guide/: introduction.md
docs/user-guide/docker/: execution.md  getting-started.md  troubleshooting.md
docs/user-guide/python/: execution.md  getting-started.md  troubleshooting.md
panos_device_certificate_report/: main.py
panos_device_certificate_report/components/: __init__.py  data_collection.py  version.py
panos_device_certificate_report/config/: hardware_families.py  panos_versions.py
panos_device_certificate_report/models/: __init__.py
panos_device_certificate_report/utilities/: cleaner.py  filters.py  pdf_generation.py
tests/: conftest.py  factories.py  test_cleaner.py  test_data_collection.py  test_device.py  test_filters.py  test_hardware_families.py  test_panos_versions.py  test_pdf_generation.py  test_version.py
